// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-2261047582 measure-wide center sans-serif f3 fw2 "
>
  <h1
    className="jsx-2261047582 lh-title fw2 f2 pv3"
  >
    <a
      className="jsx-2261047582 no-underline"
      href="/"
    >
      melkat
    </a>
  </h1>
</main>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-2261047582 measure-wide center sans-serif f3 fw2 "
>
  <h1
    className="jsx-2261047582 lh-title fw2 f2 pv3"
  >
    <a
      className="jsx-2261047582 no-underline"
      href="/"
    >
      melkat
    </a>
  </h1>
  <b>
    #content
  </b>
</main>
`;
